<resources>
    <string name="app_name">Fumo Plush Checklist</string>
    <string name="title_list">Список</string>
    <string name="title_collection">Коллекция</string>
    <string name="title_profile">Профиль</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Регистрация</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder_list">Item Text</string>
    <string name="delete">Удалить</string>
    <string name="type">Тип:</string>
    <string name="rarity">Редкость:</string>
    <string name="exit">Выйти</string>
    <string name="delete_profile">Удалить профиль</string>
    <string name="no_name">Ну кринж какой то</string>
    <string name="name">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="username">Логин</string>
    <string name="password">Пароль</string>
    <string name="password_again">Повторите пароль</string>
    <string name="sign_in">Зарегистрироваться</string>
    <string name="already_have_account">Уже есть аккаунт? Войдите</string>
    <string name="log_in">Войти</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="neko_miko_reimu">Neko Miko Reimu</string>
    <string name="description">Описание</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="version">Версия</string>
    <string name="default_version">V2</string>
    <string name="year">Год выпуска</string>
    <string name="default_year">2018</string>
    <string name="price">Официальная стоимость</string>
    <string name="default_price">3600</string>
    <string name="default_type">Regular Fumo</string>
    <string name="default_rarity">Common</string>
    <string name="where_linthalo">Где купить</string>
    <string name="empty_collection_text">Здесь будет отображаться коллекция, когда вы ее соберете!</string>
</resources>