<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/store_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ui.items.ItemFragment">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="400dp"

                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/neko_miko_reimu"
                android:textColor="@color/maintext"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/description"
                android:textColor="@color/maintext"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_medium"
                android:text="@string/something_went_wrong"
                android:textColor="@color/maintext"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_marginVertical="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/version"
                    android:textColor="@color/maintext"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/version"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_medium"
                    android:text="@string/default_version"
                    android:textColor="@color/maintext"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginVertical="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/year"
                    android:textColor="@color/maintext"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_medium"
                    android:text="@string/default_year"
                    android:textColor="@color/maintext"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginVertical="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/price"
                    android:textColor="@color/maintext"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/cost"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_medium"
                    android:text="@string/default_price"
                    android:textColor="@color/maintext"
                    android:textSize="16sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_marginVertical="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/type"
                    android:textColor="@color/maintext"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_medium"
                    android:text="@string/default_type"
                    android:textColor="@color/maintext"
                    android:textSize="16sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_marginVertical="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/rarity"
                    android:textColor="@color/maintext"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/rarity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_medium"
                    android:text="@string/default_rarity"
                    android:textColor="@color/maintext"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


    <Button
        android:layout_marginVertical="8dp"
        android:id="@+id/store_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/nunito_extrabold"
        android:background="@drawable/rounded_button"
        android:padding="12dp"
        android:text="@string/where_linthalo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <ToggleButton
        android:layout_margin="16dp"
        android:id="@+id/favorite"
        android:background="@drawable/toggle_selector"
        android:textOn=""
        android:textOff=""
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
